<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_difuminado1"
    tools:context=".cliente.nuevoCliente">

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_dni"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtDni"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_dni"
                android:inputType="textPersonName"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_nombres"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtNombre"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_nombre"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_direccion"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtDireccion"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_direccion"
                android:inputType="textPersonName"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_telefono"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtTelefono"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_telefono"
                android:inputType="phone"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txt_correo"
                android:layout_marginLeft="5dp"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtCorreo"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_correo"
                android:inputType="textEmailAddress"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"/>
        </TableRow>
    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:fontFamily="@font/alegreya_sans_sc_black_italic"
        android:textSize="12dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAllCaps="false"
        android:text="@string/btn_guardar" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <Button
        android:id="@+id/btn_verClientes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:fontFamily="@font/alegreya_sans_sc_black_italic"
        android:textSize="12dp"
        android:onClick="iraMostrarClientes"
        android:textAllCaps="false"
        android:text="@string/btn_listaClientes" />
    </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn_registrarVenta"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:text="@string/btn_insertarVentas"
            android:textAllCaps="false"
            android:textStyle="bold"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:fontFamily="@font/alegreya_sans_sc_black_italic"
            android:textSize="12dp" />

    </LinearLayout>
</LinearLayout>