<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/fondo_difuminado1"
    tools:context=".mercancias.nueva_mercancia">

    <Space
        android:layout_width="match_parent"
        android:layout_height="25dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:fontFamily="@font/acme"
            android:textSize="13dp"
            android:textStyle="bold"
            android:text="@string/txt_Cliente" />

        <Spinner
            android:id="@+id/spinnerCliente"
            android:layout_width="159dp"
            android:layout_height="match_parent"
            android:textSize="13dp"
            android:fontFamily="@font/acme"
            android:background="@drawable/stylo_borde_editext"
            tools:ignore="SpeakableTextPresentCheck" />
        <Space
            android:layout_width="10dp"
            android:layout_height="10dp"
            />

        <Button
            android:id="@+id/btn_nuevoCliente"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textAllCaps="false"
            android:text="@string/btn_insertarClientes"
            android:textStyle="bold"
            android:fontFamily="@font/alegreya_sans_sc_black_italic"
            android:backgroundTint="@android:color/holo_blue_dark"
            android:textSize="12dp"
            />

    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/txt_factura"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtFactura"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_factura"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/txt_producto"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtProducto"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_producto"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"
                android:inputType="textPersonName" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/txt_cantidad"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtCantidad"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_cantidad"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"
                android:inputType="numberDecimal" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Space
                android:layout_width="match_parent"
                android:layout_height="5dp" />
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/txt_precio"
                android:fontFamily="@font/acme"
                android:textSize="13dp"
                android:textStyle="bold"/>

            <EditText
                android:id="@+id/txtPrecio"
                android:layout_width="280dp"
                android:layout_height="48dp"
                android:ems="10"
                android:hint="@string/hint_precio"
                android:textSize="13dp"
                android:fontFamily="@font/acme"
                android:background="@drawable/stylo_borde_editext"
                android:inputType="numberDecimal" />
        </TableRow>


    </TableLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="22dp" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="12dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:fontFamily="@font/alegreya_sans_sc_black_italic"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/btn_guardar" />

    <Button
        android:id="@+id/btn_verVenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="12dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:fontFamily="@font/alegreya_sans_sc_black_italic"
        android:text="@string/btn_listaVentas" />




</LinearLayout>